--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "framer-motion": "^12.16.0",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v4": "^2.0.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^11.0.5",
