--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +13,7 @@
     "graphql": "^16.11.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v4": "^2.0.1",
