--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "node-cron": "^4.1.0",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha-v4": "^2.0.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-pdf": "^9.2.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.89.1"
   },
